--- a/ngTraining/ngTraining.csproj
+++ b/ngTraining/ngTraining.csproj
@@ -89,6 +89,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app.js" />
+    <Content Include="dashboard.html" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-aria.js" />
@@ -116,6 +118,8 @@
     <Content Include="Scripts\angular-touch.min.js" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
+    <Content Include="speakers.html" />
+    <Content Include="speakers.js" />
     <Content Include="training.html" />
     <Content Include="training.js" />
     <Content Include="Web.config" />
